tests/files/type_checker_tests/should_fail/207.cmdr
//Should fail asserts when not using string
assert true, 3;
